--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.3.4",
+    "axios": "^1.5.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "mobx": "^6.8.0",
@@ -17,6 +17,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "sharp": "^0.32.6"
   }
 }
