--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.4",
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
     "next": "13.2.4",
