--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "axios": "^1.5.1",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.4",
-    "mobx": "^6.8.0",
-    "mobx-react": "^7.6.0",
-    "next": "13.2.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.59.3",
+    "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.3",
     "sharp": "^0.32.6"
   }
 }
